web-client-zecore/overlays/production/ingresses/mappa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "True"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /registratumappa {
        rewrite /registratumappa https://traveler.mappa.mx/registratumappa/ redirect;
      }

  name: web-client-mappa-zecore
  namespace: web-client
spec:
  rules:
    - host: mappa.mx
      http:
        paths:
          - backend:
              service:
                name: web-client-mappa-zecore
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific

    - host: www.mappa.mx
      http:
        paths:
          - backend:
              service:
                name: web-client-mappa-zecore
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
