web-client-zecore/overlays/production/ingresses/nooz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "True"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "True"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /comprar/colchones/colchon-nooz {
        rewrite /comprar/colchones/colchon-nooz https://nooz.mx/comprar/colchones/colchon-high-support redirect;
      }

      location /custom_50x/ {
        proxy_pass https://d1crvq4zuhdsef.cloudfront.net/503_nooz/;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
      }

      error_page 500 502 503 504 /custom_50x/index.html;
      location /error_testing {
          fastcgi_pass unix:/does/not/exist;
      }
  name: web-client-nooz-zecore
  namespace: web-client
spec:
  rules:
    - host: nooz.mx
      http:
        paths:
          - backend:
              service:
                name: web-client-nooz-zecore
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
